tests/ui/trait-bounds/duplicate-relaxed-bounds.stderr
error[E0203]: duplicate relaxed `Sized` bounds
  --> $DIR/duplicate-relaxed-bounds.rs:1:13
   |
LL | fn dupes<T: ?Sized + ?Sized + ?Iterator + ?Iterator>() {}
   |             ^^^^^^   ^^^^^^

error[E0203]: duplicate relaxed `Iterator` bounds
  --> $DIR/duplicate-relaxed-bounds.rs:1:31
   |
LL | fn dupes<T: ?Sized + ?Sized + ?Iterator + ?Iterator>() {}
   |                               ^^^^^^^^^   ^^^^^^^^^

error[E0203]: duplicate relaxed `Sized` bounds
  --> $DIR/duplicate-relaxed-bounds.rs:10:16
   |
LL |     type Type: ?Sized + ?Sized;
   |                ^^^^^^   ^^^^^^

error: this relaxed bound is not permitted here
  --> $DIR/duplicate-relaxed-bounds.rs:17:21
   |
LL |         Self::Type: ?Sized;
   |                     ^^^^^^
   |
   = note: in this context, relaxed bounds are only allowed on type parameters defined on the closest item

error[E0203]: duplicate relaxed `Sized` bounds
  --> $DIR/duplicate-relaxed-bounds.rs:29:19
   |
LL | fn where_dupes<T: ?Sized>()
   |                   ^^^^^^
...
LL |     T: ?Sized,
   |        ^^^^^^

error: bound modifier `?` can only be applied to `Sized`
  --> $DIR/duplicate-relaxed-bounds.rs:1:31
   |
LL | fn dupes<T: ?Sized + ?Sized + ?Iterator + ?Iterator>() {}
   |                               ^^^^^^^^^

error: bound modifier `?` can only be applied to `Sized`
  --> $DIR/duplicate-relaxed-bounds.rs:1:43
   |
LL | fn dupes<T: ?Sized + ?Sized + ?Iterator + ?Iterator>() {}
   |                                           ^^^^^^^^^

error: bound modifier `?` can only be applied to `Sized`
  --> $DIR/duplicate-relaxed-bounds.rs:25:26
   |
LL | fn not_dupes<T: ?Sized + ?Iterator>() {}
   |                          ^^^^^^^^^

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0203`.
